--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
         </svg>
         <div onclick="if(!auth.auth().currentUser){location.href='signin.html';}"><img class="header_obj" id="login_img" src="img/profile.png"></div>
     </header>
-    <article>
+    <article id="notice">
+        <img src="img/blank.png">
+    </article>
+    <article id="con">
         <section id="main">
             <div class="block" id="summary">
                 <div>
