코드 리뷰&내용 검토&일부 버그 수정
오래걸림;;

--- a/appendix.html
+++ b/appendix.html
@@ -117,7 +117,7 @@
         </section>
         <section id="tool">
             <div id="login"><p id="login_txt">로그인하기</p><img id="login_img" src="img/profile.png"></div>
-            <form autocomplete="off">
+            <form autocomplete="off" id="search">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!" name="search">
                 <button id="search_btn" type="submit"><img src="img/search.png"></button>
             </form>
