--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div onclick="if(!auth.auth().currentUser){location.href='signin.html';}"><img class="header_obj" id="login_img" src="img/profile.png"></div>
     </header>
     <article id="notice">
-        <img src="img/blank.png">
+        <img src="img/blank.png" style="opacity: 0;">
     </article>
     <article id="con">
         <section id="main">
