Write Docs(영어 이거 맞나)

--- a/appendix.html
+++ b/appendix.html
@@ -89,35 +89,43 @@
                 <div id="imgBox">
                     <div class="thanks_box" id="주현명님">
                         <img class="thank" src="../img/default.png">
-                        <p id="thank_you" class="주현명님"><strong>주현명</strong> 님</p>
+                        <p class="thank_you" id="주현명님"><strong>주현명</strong> 님</p>
                     </div>
                     <div class="thanks_box" id="Violet_XF님">
                         <img class="thank" src="../img/default.png">
-                        <p id="thank_you" class="Violet_XF님"><strong>Violet XF</strong> 님</p>
+                        <p class="thank_you" id="Violet_XF님"><strong>Violet XF</strong> 님</p>
                     </div>
                     <div class="thanks_box" id="Doami님">
                         <img class="thank" src="../img/default.png">
-                        <p id="thank_you" class="Doami님"><strong>Doami</strong> 님</p>
+                        <p class="thank_you" id="Doami님"><strong>Doami</strong> 님</p>
                     </div>
                     <div class="thanks_box" id="JusticeHui님">
                         <img class="thank" src="../img/default.png">
-                        <p id="thank_you" class="JusticeHui님"><strong>JusticeHui</strong> 님</p>
+                        <p class="thank_you" id="JusticeHui님"><strong>JusticeHui</strong> 님</p>
                     </div>
-                    <div class="thanks_box" id="franknoh님">
-                        <img class="thank" src="../img/dfranknoh님.png">
-                        <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님</p>
+                    <div class="thanks_box" id="핀밀크님">
+                        <img class="thank" src="../img/default.png">
+                        <p class="thank_you" id="핀밀크님"><strong>핀밀크</strong> 님</p>
                     </div>
                 </div>
             </div>
             <div id="99-3" class="content">
                 <p class="title">문의하기</p>
                 <p class="dscrpt">카카오톡 봇 문서에 대한 아이디어, 보완점, 내용에 대한 오류가 있을 때 문의해주세요!</p>
-                <li class="a" id="https://discord.gg/S8fMxHwSzB">문의하기</li>
+                <li class="a" id="https://discord.gg/jW4G3fEmmZ">문의하기</li>
+            </div>
+            <div id="dev" class="content">
+                <div id="imgs">
+                    <img src="img/nolbo.png">
+                    <img src="img/franknoh.png">
+                </div>
+                <p id="dev"><strong>N O L B O</strong>  |  <strong>F R A N K N O H</strong></p>
             </div>
         </section>
         <section id="tool">
+            <div id="view"><img id="view_img" src="img/view.png"><p id="view_txt">0</p><img id="arrow" src="img/arrow_up.png"></div>
             <div id="login"><p id="login_txt">로그인하기</p><img id="login_img" src="img/profile.png"></div>
-            <form autocomplete="off">
+            <form autocomplete="off" id="search">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!" name="search">
                 <button id="search_btn" type="submit"><img src="img/search.png"></button>
             </form>
@@ -194,7 +202,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <p class="code"><i>Dante Alighieri - La Divina Commedia</i></p>
+                            <p class="code" id="i">Dante Alighieri - La Divina Commedia</p>
                         </div>
                     </div>
                 </div>
