--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <div class="logblock" id="19">
                 <h1 class="title">Kakaotalk Bot Docs 19</h1>
                 <div class="big">
+                    <li>KBotHub 계정 도입</li>
                     <li>새로운 디자인 구성
                         <ul>
                             <li>문서 개별화 (개요, 레거시 API, API2, 라이노 엔진, 심화, 부록 개별화)</li>
@@ -188,6 +189,7 @@
                         </ul>
                     </li>
                     <li>북마크 기능 추가</li>
+                    <li>성탄절, 국가 기념일, 명절 등에 따라 변경되는 오픈 그래픽 이미지</li>
                 </div>
             </div>
             <div class="logblock" id="18">
