--- a/summary.html
+++ b/summary.html
@@ -185,7 +185,7 @@
                     <div class="code">
                         <pre><code class="javascript">function response (params) {<br>    // TODO<br>}</code></pre>
                     </div>
-                    <p class="dscrpt">이 소스에서 </p><p class="code" id="p">params</p><p class="dscrpt">는 기본적인 response함수의 매개변수를 속성이나 메서드로 가지고 있는 객체입니다. 예를 들면, 기본적인 response함수에서 </p><p class="code" id="p">msg</p><p class="dscrpt">로 사용하는 것을 통합된 매개변수에서는 </p><p class="code" id="p">params.msg</p><p class="dscrpt">와 같이 사용합니다.</p>
+                    <p class="dscrpt">이 소스에서 </p><p class="code" id="p">params</p><p class="dscrpt">는 기본적인 response함수의 매개변수를 속성이나 메소드로 가지고 있는 객체입니다. 예를 들면, 기본적인 response함수에서 </p><p class="code" id="p">msg</p><p class="dscrpt">로 사용하는 것을 통합된 매개변수에서는 </p><p class="code" id="p">params.msg</p><p class="dscrpt">와 같이 사용합니다.</p>
                     <div class="crf">
                         <pre><code class="nohighlight"><p class="crfBox">통합된 매개변수를 사용하기 위해서는 스크립트를 생성할 때 '통합된 매개변수를 사용합니다. JavaScript 초심자에게는 권장하지 않습니다' 항목을 선택하거나 스크립트 설정에서 '통합된 매개변수' 항목을 선택해야 합니다.</p></code></pre>
                     </div>
@@ -208,8 +208,9 @@
             </div>
         </section>
         <section id="tool">
+            <div id="view"><img id="view_img" src="img/view.png"><p id="view_txt">0</p><img id="arrow" src="img/arrow_up.png"></div>
             <div id="login"><p id="login_txt">로그인하기</p><img id="login_img" src="img/profile.png"></div>
-            <form autocomplete="off">
+            <form autocomplete="off" id="search">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!" name="search">
                 <button id="search_btn" type="submit"><img src="img/search.png"></button>
             </form>
@@ -286,7 +287,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <p class="code"><i>Dante Alighieri - La Divina Commedia</i></p>
+                            <p class="code" id="i">Dante Alighieri - La Divina Commedia</p>
                         </div>
                     </div>
                 </div>
