--- a/deepening.html
+++ b/deepening.html
@@ -75,7 +75,7 @@
     <article>
         <section class="docs_con" id="deepening"></section>
         <section id="tool">
-            <div id="view"><img id="view_img" src="img/view.png"><p id="view_txt">0</p><img id="arrow" src="img/arrow_up.png"></div>
+            <div id="view"><img id="view_img" src="img/view.png"><p id="online_txt">0</p><p>/</p><p id="view_txt">0</p><img id="arrow" src="img/arrow_up.png"></div>
             <div id="login"><p id="login_txt">로그인하기</p><img id="login_img" src="img/profile.png"></div>
             <form autocomplete="off" id="search">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!" name="search">
