--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="logblock" id="19">
                 <h1 class="title">Kakaotalk Bot Docs 19</h1>
                 <div class="big">
-                    <li>KBotHub 계정 도입</li>
+                    <li>KBotHub 계정 도입 (아래의 기능을 더 편히 사용하기 위해 계정 가입을 추천합니다.)</li>
                     <li>새로운 디자인 구성
                         <ul>
                             <li>문서 개별화 (개요, 레거시 API, API2, 라이노 엔진, 심화, 부록 개별화)</li>
@@ -186,9 +186,10 @@
                             <li>테마변경 기능 추가</li>
                             <li>텍스트 크기 변경 기능 추가</li>
                             <li>글꼴 변경 기능 추가</li>
+                            <li>조회수 기능 추가 (현재 온라인 수 / 전체 조회수)</li>
                         </ul>
                     </li>
-                    <li>북마크 기능 추가</li>
+                    <li>북마크 기능 추가 (타이틀 텍스트를 클릭해 추가)</li>
                     <li>성탄절, 국가 기념일, 명절 등에 따라 변경되는 오픈 그래픽 이미지</li>
                 </div>
             </div>
