--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
                             <li>조회수 기능 추가 (현재 온라인 수 / 전체 조회수)</li>
                         </ul>
                     </li>
+                    <li>내용 추가
+                        <ul>
+                            <li>레거시 API > Api, replier 추가작성</li>
+                            <li>API2 > Bot, Event 추가작성</li>
+                            <li>라이노 엔진 > 내장 객체 (Set, WeakMap, WeakSet, JSON) 추가작성</li>
+                        </ul>
+                    </li>
                     <li>북마크 기능 추가 (타이틀 텍스트를 클릭해 추가)</li>
                     <li>성탄절, 국가 기념일, 명절 등에 따라 변경되는 오픈 그래픽 이미지</li>
                 </div>
