일부 버그 수정

--- a/signin.html
+++ b/signin.html
@@ -30,6 +30,7 @@
             <button id="complete" type="button" class="g-recaptcha" data-sitekey="6LccHfIZAAAAANffs67hBZHRfjDc_s-8cKtWgNNX" data-callback='onSubmit' data-action='submit'>로그인</button>
         </form>
         <p class="sml">계정이 없으신가요? <a href="signup.html">계정을 만들어보세요!</a></p>
+        <p class="sml">문제나 오류가 있나요?<a href="https://discord.gg/jW4G3fEmmZ">디스코드 서버</a>로 문의해주세요!</p>
     </article>
     <script>
         function onSubmit(token) {
