--- a/signup.html
+++ b/signup.html
@@ -42,6 +42,7 @@
             <button id="complete" type="button" class="g-recaptcha" data-sitekey="6LccHfIZAAAAANffs67hBZHRfjDc_s-8cKtWgNNX" data-callback='onSubmit' data-action='submit'>회원가입</button>
         </form>
         <p class="sml" id="btm">이미 계정이 있으신가요? <a href="signin.html">그럼 얼른 로그인하러 가요!</a></p>
+        <p class="sml">문제나 오류가 있나요?<a href="https://discord.gg/jW4G3fEmmZ">디스코드 서버</a>로 문의해주세요!</p>
     </article>
     <script>
         function onSubmit(token) {
