--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
             </div>
         </section>
         <section id="log">
+            <div class="logblock" id="19.1">
+                <h1 class="title">Kakaotalk Bot Docs 19.1</h1>
+                <div class="big">
+                    <li>KBotHub 계정 오류 수정</li>
+                </div>
+            </div>
             <div class="logblock" id="19">
                 <h1 class="title">Kakaotalk Bot Docs 19</h1>
                 <div class="big">
