--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@
             </div>
         </section>
         <section id="log">
+            <div class="logblock" id="19.2">
+                <h1 class="title">Kakaotalk Bot Docs 19.2</h1>
+                <div class="big">
+                    <li>KBotHub 계정 보안 강화</li>
+                    <ul>
+                        <li>API사용</li>
+                    </ul>
+                </div>
+            </div>
             <div class="logblock" id="19.1">
                 <h1 class="title">Kakaotalk Bot Docs 19.1</h1>
                 <div class="big">
